<resources>
    <string name="app_name">Shikhon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_post_title">Android Development Basics</string>
    <string name="dummy_post_date">12 Jan 2021</string>
    <string name="dummy_post_content">Some random gibberish course which will help you to learn android native with kotlin java and whatever shit you want in a shitty and stupid fucking way</string>
    <string name="dummy_post_loaction">Fucker\'s Home</string>
    <string name="_100">100</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="post_a_new_training_offer">Post a new training offer</string>
    <string name="training_name">Training Name</string>
    <string name="training_description">Training Description</string>
    <string name="training_location">Training Location</string>
    <string name="update_post">Update post</string>
    <string name="no_like_text">Nobody liked this post yet</string>
    <string name="self_like_text_1">"You and "</string>
    <string name="john_doe">John Doe</string>
    <string name="dummy_comment">I was wondering if it is a comment I should make, I should make it interesting. But I don\'t have the energy to do something like that lmao</string>
    <string name="ratings_amp_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="password">Password</string>

    <string-array name="tagList">
        <item>Cooking</item>
        <item>Android</item>
        <item>iOS</item>
        <item>Driving</item>
        <item>Graphics</item>
        <item>Sewing</item>
    </string-array>
</resources>