<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="post"
            type="com.sushmoyr.shikhon.backend.data.TrainingPost" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".frontend.main.trainer.tabs.home.fragments.UpdatePostFragment">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/updatePostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/update"
            app:icon="@drawable/ic_baseline_check_24"
            app:layout_constraintBottom_toTopOf="@+id/cancelUpdateButton"
            app:layout_constraintEnd_toEndOf="@+id/cancelUpdateButton" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cancelUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/cancel"
            app:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true" />

        <TextView
            android:id="@+id/updatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/update_post"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trainingTitleUpdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updatePost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trainingTitleUpdateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/training_name"
                android:text="@{post.trainingName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trainingDescUpdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/trainingTitleUpdate"
            app:layout_constraintStart_toStartOf="@id/trainingTitleUpdate"
            app:layout_constraintTop_toBottomOf="@+id/trainingTitleUpdate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trainingDescText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:lines="6"
                android:hint="@string/training_description"
                android:text="@{post.trainingDescription}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/updateLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/trainingDescUpdate"
            app:layout_constraintStart_toStartOf="@id/trainingDescUpdate"
            app:layout_constraintTop_toBottomOf="@+id/trainingDescUpdate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateLocationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/training_location"
                android:text="@{post.trainingLocation}" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>