<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="post"
            type="com.sushmoyr.shikhon.backend.data.TrainingPost" />

        <variable
            name="user"
            type="com.sushmoyr.shikhon.backend.data.User" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:sourceUrl="@{user.profilePicUri}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@{user.name}"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/profilePic"
                app:layout_constraintTop_toTopOf="@+id/profilePic" />

            <TextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:parseDateTime="@{post.postTime}"
                android:text="@string/dummy_post_date"
                app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                app:layout_constraintStart_toStartOf="@+id/userName" />

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_semibold"
                android:maxLines="2"
                android:text="@{post.trainingName}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/profilePic"
                app:layout_constraintTop_toBottomOf="@+id/profilePic"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/postDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="5"
                android:ellipsize="end"
                android:text="@{post.trainingDescription}"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintEnd_toEndOf="@+id/postTitle"
                app:layout_constraintStart_toStartOf="@+id/postTitle"
                app:layout_constraintTop_toBottomOf="@+id/postTitle" />

            <TextView
                android:id="@+id/postLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/raleway"
                android:maxLines="3"
                android:text="@{post.trainingLocation}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/postDescription"
                app:layout_constraintTop_toBottomOf="@+id/postDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postPhotos"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/postLocation"
                app:layout_constraintStart_toStartOf="@+id/postLocation"
                app:layout_constraintTop_toBottomOf="@+id/postLocation" />

            <ImageView
                android:id="@+id/testImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postDescription"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/react"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/floating_action_button"
                android:setReactColor="@{post.reacts}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postPhotos"
                app:srcCompat="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/numberOfReacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/react"
                app:layout_constraintStart_toStartOf="@+id/react"
                app:layout_constraintTop_toBottomOf="@+id/react"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/react"
                app:layout_constraintStart_toEndOf="@+id/react"
                app:layout_constraintTop_toTopOf="@+id/react"
                app:srcCompat="@drawable/ic_mode_comment" />

            <TextView
                android:id="@+id/numberOfComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                app:layout_constraintEnd_toEndOf="@+id/comment"
                app:layout_constraintStart_toStartOf="@+id/comment"
                app:layout_constraintTop_toBottomOf="@+id/comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>