<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="post"
            type="com.sushmoyr.shikhon.backend.data.TrainingPost" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D0FFFFFF">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detailsUserPhoto"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:sourceUrl="@{post.user.profilePicUri}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detailsUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@{post.user.name}"
                        android:hint="John Doe"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/detailsUserPhoto"
                        app:layout_constraintTop_toTopOf="@+id/detailsUserPhoto" />

                    <TextView
                        android:id="@+id/detailsPostDate"
                        style="@style/TextAppearance.MaterialComponents.Overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_post_date"
                        android:parseDate="@{post.postTime}"
                        app:layout_constraintBottom_toBottomOf="@+id/detailsUserPhoto"
                        app:layout_constraintStart_toStartOf="@+id/detailsUserName"
                        app:layout_constraintTop_toBottomOf="@+id/detailsUserName" />

                    <TextView
                        android:id="@+id/detailsPostTitle"
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/dummy_post_title"
                        android:text="@{post.trainingName}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/detailsUserPhoto"
                        app:layout_constraintTop_toBottomOf="@+id/detailsUserPhoto" />

                    <TextView
                        android:id="@+id/detailsPostContent"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/dummy_post_content"
                        android:text="@{post.trainingDescription}"
                        app:layout_constraintEnd_toEndOf="@+id/detailsPostLocation"
                        app:layout_constraintStart_toStartOf="@+id/detailsPostLocation"
                        app:layout_constraintTop_toBottomOf="@+id/detailsPostLocation" />

                    <TextView
                        android:id="@+id/detailsPostLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{post.trainingLocation}"
                        app:layout_constraintEnd_toEndOf="@+id/detailsPostTitle"
                        app:layout_constraintStart_toStartOf="@+id/detailsPostTitle"
                        app:layout_constraintTop_toBottomOf="@+id/detailsPostTitle" />


                    <LinearLayout
                        android:id="@+id/reactCommentLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detailsPostContent">


                        <LinearLayout
                            android:id="@+id/reactButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <ImageView
                                android:id="@+id/reactIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_favorite" />

                            <TextView
                                android:id="@+id/reactText"
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="Like" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/commentButton"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_add_comment_24" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="Comment" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/more_options"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_unfold_more" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:text="More" />

                        </LinearLayout>


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detailsPostPhotosRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>
    </ScrollView>
</layout>